# skydiscover

./: README.md  pyproject.toml
benchmarks/insight_gen/Happiness/: config.yaml  evaluator.py  initial_program.py
benchmarks/insight_gen/VIS/: config.yaml  initial_program.py
benchmarks/insight_gen/cars/: config.yaml  initial_program.py
benchmarks/insight_gen/house/: config.yaml  initial_program.py
benchmarks/insight_gen/insurance/: config.yaml
benchmarks/insight_gen/sales/: config.yaml  initial_program.py
configs/: README.md
skydiscover/: config.py
skydiscover/llm/: agentic_generator.py  openai.py  responses_utils.py
skydiscover/search/: default_discovery_controller.py
